--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     width: 100%;
 }
 .four_zero_four_bg {
-    background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
+    background-image: url(./dribbble_1.gif);
     height: 400px;
     background-position: center;
 }
